# python-assesment

./: README.md  pyproject.toml
python-assesment/: main.py
python-assesment/lib/: __init__.py  api.py  api_framework.py  person.py
swagger_ui/: swagger-initializer.js
